# typo-robustness-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/processed/english/: frequent_words_top500.json
data/processed/japanese/: frequent_words_top500.json
scripts/: generate_perturbation_mapping.py  run_case_study.py  run_inference.py  run_perturbation.py  run_preprocessing.py  run_rule_based_perturbation.py
src/benchmarks/: __init__.py  benchmark_loader.py
src/evaluation/: __init__.py  analyzer.py  evaluator.py
src/experiment1/: __init__.py
src/experiment1/evaluation/: __init__.py
src/experiment1/perturbation/: __init__.py
src/experiment1/preprocessing/: __init__.py
src/experiment2/: __init__.py
src/experiment2/entropy_analysis/: __init__.py  case_study_analyzer.py  entropy_calculator.py
src/experiment2/pattern_perturbation/: __init__.py  pattern_generator.py
src/experiment2/token_extraction/: __init__.py  benchmark_token_extractor.py
src/models/: __init__.py  inference.py  model_loader.py
src/perturbation/: __init__.py  benchmark_perturbator.py  perturbator.py  pos_utils.py  rule_based_perturbator.py  wordnet_utils.py
src/preprocessing/: __init__.py  english_words.py  japanese_words.py
src/utils/: __init__.py  config.py  logger.py
src/visualization/: __init__.py  wordcloud_generator.py
tests/test_evaluation/: __init__.py  test_evaluator.py
tests/test_perturbation/: test_benchmark_perturbator.py  test_perturbator.py
tests/test_preprocessing/: test_english_words.py  test_japanese_words.py
