[project]
name = "nlp2026"
version = "0.1.0"
description = "LLMの文字レベル摂動に対する脆弱性分析プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "wordcloud>=1.9.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "lm-eval>=0.4.9.2",
    "openai>=2.9.0",
    "datasets>=4.4.1",
    "pykakasi>=2.3.0",
    "protobuf>=6.33.2",
    "sentencepiece>=0.2.1",
    "vllm>=0.6.0,<0.8.0",
    "scipy>=1.16.3",
    "ipykernel>=7.1.0",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # スクリプトではパス設定後にインポートが必要
"src/models/inference.py" = ["E501"]  # few-shot examplesは公式形式を維持するため行長制限を緩和

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
